# gyftie-contracts2

./: .gitignore  CMakeLists.txt  README.txt  compile.sh  deployments.sh  gyftie.sh  gyftie2.0deployment.txt  gyftietoken_pause.json  jungle.sh
include/: badge.hpp  challenge.hpp  comment.hpp  common.hpp  gftorderbook.hpp  gyft.hpp  gyftie.hpp  gyftietoken.hpp  lock.hpp  lockchain.hpp  migration.hpp  permissions.hpp  permit.hpp  profile.hpp  proposal.hpp  reputation.hpp  token.hpp  utility.hpp
include/common/: common.hpp
include/common/models/: gyft.hpp  profile.hpp
include/gyftietoken/: gyftietoken.hpp
resources/: gftmultisig.contracts.md  gftorderbook.contracts.md  gyftietoken.contracts.md
src/: CMakeLists.txt
src/classes/: gyft.cpp  gyftie.cpp  lock.cpp  profile.cpp  proposal.cpp  reputation.cpp
src/gftmultisig/: CMakeLists.txt  gftmultisig.cpp
src/gftorderbook/: CMakeLists.txt  gftorderbook.cpp
src/gyftietoken/: CMakeLists.txt  gyftietoken.cpp
src/token/: CMakeLists.txt  token.cpp
tests/: gyftietoken.test.js  package.json  util.js
